--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: rgb(223, 193, 42);
-    color: linen;
+    color: darkolivegreen;
     font-size: 150%;
     line-height: 1.4;
 }
